# mkdocs-obsidian-interactive-graph-plugin

./: .env  .gitignore  404.html  Dockerfile  LICENSE  README.md  UV_MIGRATION_PLAN.md  compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml
Concept/: index.html
Docker/: index.html
Installation/: index.html
References/: index.html
Usage/ECharts/: index.html
Usage/Setup/: index.html
assets/javascripts/: bundle.bd41221c.min.js  graph.js  graph.json  interactive_graph.js  obsidian_tags.js
docs/ObsidianVault/: Concept.md  Docker.md  Installation.md  References.md  index.md
docs/ObsidianVault/Usage/: ECharts.md  Setup.md
docs/ObsidianVault/assets/javascripts/: graph.js  interactive_graph.js
docs/YourSiteName/: Another Site.md  index.md
docs/YourSiteName/Test1/: index.md
docs/YourSiteName/Test1/Test3/: index.md
docs/YourSiteName/Test2/: index.md
docs/YourSiteName/Test2/Test1/: index.md
docs/YourSiteName/Test2/Test3/: index.md
docs/YourSiteName/assets/javascripts/: graph.js
hooks/: graph.py
obsidian_interactive_graph/: _version.py  plugin.py
obsidian_interactive_graph/tests/: test_paths.py
search/: search_index.json
tests/: test_integration.py  test_performance.py
