[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-obsidian-interactive-graph-plugin"
description = "A MkDocs plugin that generates a obsidian like interactive graph"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "daxcore", email = "300ccda6-8d43-4f23-808e-961e653ff7d6@anonaddy.com"}]
requires-python = ">=3.10"
dynamic = ["version"]

# Core dependencies with conservative constraints
dependencies = [
    "mkdocs-material>=9.0.0,<10.0.0",  # Pin to 9.x series for stability
]

[project.optional-dependencies]
# Documentation dependencies (moved from requirements.txt)
docs = [
    "mkdocs-callouts>=1.0.0",
    "mkdocs-glightbox>=0.3.0", 
    "mkdocs-obsidian-bridge>=0.2.0",
    "mkdocs-obsidian-support-plugin>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs>=1.6.0",
]

# Testing matrix dependencies
test = [
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocs>=1.6.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/daxcore/mkdocs-obsidian-interactive-graph-plugin"
Repository = "https://github.com/daxcore/mkdocs-obsidian-interactive-graph-plugin"
Issues = "https://github.com/daxcore/mkdocs-obsidian-interactive-graph-plugin/issues"

[project.entry-points."mkdocs.plugins"]
obsidian-interactive-graph = "obsidian_interactive_graph.plugin:ObsidianInteractiveGraphPlugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "obsidian_interactive_graph/_version.py"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs>=1.6.0",
]
